--- a/OW.Operation/Views/Shared/_Template.cshtml
+++ b/OW.Operation/Views/Shared/_Template.cshtml
@@ -13,6 +13,8 @@
     <link href="~/wwwroot/comm/css/custom.css" rel="stylesheet" />
     <link href="~/wwwroot/msg/message.css" rel="stylesheet" />
     <link href="~/wwwroot/pageSplit/page.css" rel="stylesheet" />
+    <link rel="stylesheet" type="text/css" href="/wwwroot/map/jquery-jvectormap.css" />
+
     <!-- Main Navbar-->
     <header class="header">
         <nav class="navbar">
@@ -127,6 +129,50 @@
     <script src="~/wwwroot/comm/js/front.js"></script>
     <script src="~/wwwroot/msg/message.js"></script>
     <script src="~/wwwroot/pageSplit/pageMe.js"></script>
+
+
+    /////////////////////
+
+    <script src="/wwwroot/map/jquery-jvectormap.js"></script>
+    <script src="/wwwroot/map/jquery-mousewheel.js"></script>
+
+    <script src="/wwwroot/map/lib/jvectormap.js"></script>
+
+    <script src="/wwwroot/map/lib/abstract-element.js"></script>
+    <script src="/wwwroot/map/lib/abstract-canvas-element.js"></script>
+    <script src="/wwwroot/map/lib/abstract-shape-element.js"></script>
+
+    <script src="/wwwroot/map/lib/svg-element.js"></script>
+    <script src="/wwwroot/map/lib/svg-group-element.js"></script>
+    <script src="/wwwroot/map/lib/svg-canvas-element.js"></script>
+    <script src="/wwwroot/map/lib/svg-shape-element.js"></script>
+    <script src="/wwwroot/map/lib/svg-path-element.js"></script>
+    <script src="/wwwroot/map/lib/svg-circle-element.js"></script>
+
+    <script src="/wwwroot/map/lib/vml-element.js"></script>
+    <script src="/wwwroot/map/lib/vml-group-element.js"></script>
+    <script src="/wwwroot/map/lib/vml-canvas-element.js"></script>
+    <script src="/wwwroot/map/lib/vml-shape-element.js"></script>
+    <script src="/wwwroot/map/lib/vml-path-element.js"></script>
+    <script src="/wwwroot/map/lib/vml-circle-element.js"></script>
+
+    <script src="/wwwroot/map/lib/vector-canvas.js"></script>
+    <script src="/wwwroot/map/lib/simple-scale.js"></script>
+    <script src="/wwwroot/map/lib/numeric-scale.js"></script>
+    <script src="/wwwroot/map/lib/ordinal-scale.js"></script>
+    <script src="/wwwroot/map/lib/color-scale.js"></script>
+    <script src="/wwwroot/map/lib/data-series.js"></script>
+    <script src="/wwwroot/map/lib/proj.js"></script>
+    <script src="/wwwroot/map/lib/world-map.js"></script>
+    <script src="/wwwroot/map/assets/jquery-jvectormap-map.js"></script>
+
+    <script>
+        $(function () {
+            debugger
+           // console.log(@Html.Raw(Session["map"]));
+            var map = $('#map1').vectorMap(@Html.Raw(Session["map"]));
+        })
+    </script>
 </body>
 
 </html>
